# TaskHub

./: README.md
Backend/: main.py  pyproject.toml
Backend/src/: server.py
Backend/src/common/: app_error.py  response.py
Backend/src/config/: setting.py
Backend/src/database/: session.py
Backend/src/database/models/: Enums.py  __init__.py  role.py  task.py  task_comment.py  task_log.py  user.py
Backend/src/middlewares/: auth.py  error_handler.py  logger.py
Backend/src/modules/auth/: google_login.py  routes.py  schema.py  service.py
Backend/src/modules/dashboard/: routes.py  service.py
Backend/src/modules/logs/: routes.py  services.py
Backend/src/modules/profile/: routes.py
Backend/src/modules/tasks/: getTask.py  routes.py  schema.py  service.py
Backend/src/utils/: security.py
Frontend/: jest.config.cjs  package-lock.json  package.json  tsconfig.json
Frontend/src/: App.tsx  index.css  jest.polyfills.js  main.tsx
Frontend/src/__tests__/: Login.test.tsx  dashboard.test.tsx  register.test.tsx  tasks.test.tsx
Frontend/src/api/: auth.ts  axios.ts
Frontend/src/components/common/: card.tsx  toast.ts
Frontend/src/components/layout/: AppLayout.tsx
Frontend/src/context/: UserContext.tsx
Frontend/src/hooks/: useUser.ts
Frontend/src/pages/auth/: Login.tsx  Logout.tsx  Register.tsx  SetUsername.tsx  oauth-success.tsx
Frontend/src/pages/dashboard/: Dashboard.tsx
Frontend/src/pages/home/: home.tsx
Frontend/src/pages/logs/: logs.tsx
Frontend/src/routes/: ProtectedRoute.tsx  useAuthRedirect.tsx
Frontend/src/services/: authService.tsx
(+4 files in other folders)
